--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url("../img mth/enam.JPG");
+  background-image: url("../img/bg2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
