--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ body {
   color: var(--primary);
 }
 
+.navbar .navbar-extra a:hover {
+  color: var(--primary);
+}
+
 .navbar .navbar-nav a::after {
   content: "";
   display: block;
