--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,11 @@ body {
 .gallery .row .menu-card img {
   border-radius: 50%;
   width: 85%;
+  transition: transfrom 0.2s ease-out;
+}
+
+.gallery .row .menu-card img:hover {
+  transform: scale(1.3);
 }
 
 .gallery .row .menu-card title {
